--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,27 @@
   --color-background: #2b2e4a;
   --color-primary-contrast: #ffffff;
 }
+
+.colored::before{
+  content: "";
+  position: absolute;
+  left: 5%;
+  right: 5%;
+  bottom: -35px;
+  border-radius: 100%;
+  height: 15px;
+  background-image: linear-gradient(to right, black 0%, black 100%);
+  /* filter: blur(20px); */
+}
+.colored::after{
+  content: "";
+  position: absolute;
+  left: 5%;
+  right: 5%;
+  bottom: -35px;
+  border-radius: 100%;
+  height: 15px;
+  background-image: linear-gradient(to right, black 0%, black 100%);
+  border: 50%;
+  filter: blur(40px);
+}
